# sqlx-vrchat-sqlite-test

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  tables.rs
src/models/: app_config.rs  connection.rs  database.rs  gamelog_join_leave.rs  gamelog_location.rs  mod.rs  trust_level.rs  usr_friend_log_current.rs
src/rows/: gamelog_join_leave.rs  gamelog_location.rs  mod.rs  sqlite_master.rs  usr_friend_log_current.rs
src/tables/: gamelog_location.rs  sqlite_master.rs  usr_friend_log_current.rs
src/zaphkiel/: join_leave_event.rs  mod.rs  trust_level.rs  world_instance.rs  world_regions.rs
