[package]
name = "sqlx-vrchat-sqlite-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
directories = "5.0.0"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "chrono", "time"] }
chrono = { version = "0.4.24", features = ["serde"] }
nom = "7.1.3"
